<resources>
    <string name="app_name">GDS_InventoryApp</string>
    <!-- Database strings -->
    <plurals name="numberOfBikeAvailable">
        <item quantity="zero">The bikes table contains no bikes.\n Please add some! \n</item>
        <item quantity="one">The bikes table contains %d bike.\n\n</item>
        <item quantity="other">The bikes table contains %d bikes.\n\n</item>
    </plurals>

    <!-- ListView emptyView strings-->
    <string name="listView_empty">Oh no!\n\nThis list is empty 😕\n\nTo add inventory\n\nTap the plus button below\n\n👇</string>

    <!--CatalogActivity strings-->
    <string name="insert_test_data">Insert Test Data</string>
    <string name="sale_button_description">Sale button</string>
    <string name="made_by">by %s</string>
    <string name="quantity_of_long">%d items in stock</string>
    <string name="price_of">£%d</string>
    <string name="sale_button_text">Sale</string>

    <!-- Toasts -->
    <string name="sold_one_bike">Sold a bike, congrats! 🎉 </string>
    <string name="cant_sell_less_than_zero">Cannot make the sale, no bikes left in stock.</string>

    <!-- EditorActivity strings-->
    <string name="make_entry_hint">Make</string>
    <string name="model_entry_hint">Model</string>
    <string name="type_entry_hint">Type</string>
    <string name="price_entry_hint">Price</string>
    <string name="quantity_of_short">%d items</string>
    <string name="quantity_entry_hint">Quantity</string>
    <string name="supplier_entry_hint">Supplier</string>
    <string name="supplier_phone_entry_hint">Supplier Phone</string>
    <string name="save_button">SAVE</string>
    <string name="add_button">ADD</string>
    <string name="bike_type_unknown">Unknown</string>
    <string name="bike_type_road">Road</string>
    <string name="bike_type_mountain">Mountain</string>
    <string name="bike_type_hybrid">Hybrid</string>
    <string name="bike_type_fixed">Fixed</string>
    <string name="bike_type_city">City</string>
    <string name="bike_type_gravel_cross">Gravel and Cross</string>
    <string name="bike_type_tandem">Tandem</string>
    <string name="bike_type_recumbent">Recumbent</string>
    <string name="bike_type_cargo">Cargo</string>
    <string name="bike_type_electric">Electric</string>
    <string name="bike_type_folding">Folding</string>
    <string name="bike_type_kids">Kids</string>
    <string name="bike_type_touring">Touring</string>
    <string name="save_bike_add_message_success">Bike was successfully added!</string>
    <string name="save_bike_add_message_fail">Bike could not be added!</string>
    <string name="editor_activity_title_add">Add a new bike</string>
    <string name="editor_activity_title_edit">Edit a bike</string>
    <string name="save_bike_update_message_success">Bike was successfully updated!</string>
    <string name="save_bike_update_message_fail">Bike could not be updated!</string>
    <string name="discard_dialog_message">Do you want to discard changes</string>
    <string name="discard_dialog_confirm">Yes</string>
    <string name="discard_dialog_deny">No, back to editing</string>
    <string name="null_values_warning">Some of the fields were null, please try to complete the form</string>

    <!-- DetailsActivity strings -->
    <string name="details_make_label">Make</string>
    <string name="details_model_label">Model</string>
    <string name="details_type_label">Type</string>
    <string name="details_price_label">Price</string>
    <string name="details_quantity_label">Quantity</string>
    <string name="details_supplier_label">Supplier</string>
    <string name="details_supplier_phone_label">Supplier Phone</string>
    <string name="details_edit_button">Edit Bike</string>
    <string name="details_delete_button">Delete Bike</string>
    <string name="details_order_button">Order</string>
    <string name="details_plus_button">+</string>
    <string name="details_quantity_edit_hint">1</string>
    <string name="details_minus_button">-</string>
    <string name="details_activity_title">Bike details</string>
    <string name="details_price_content">£%d</string>
    <string name="details_quantity_content">%d items in stock</string>
    <string name="details_increase_quantity_toast_success">Increased quantity by %d</string>
    <string name="details_decrease_quantity_toast_success">Decreased quantity by %d</string>
    <string name="details_decrease_quantity_toast_fail">No items left in stock</string>
    <string name="details_delete_message">Do you really want to delete this bike?</string>
    <string name="details_delete_positive_confirmation">Delete</string>
    <string name="details_delete_negative_confirmation">Cancel</string>
    <string name="details_delete_confirmation_toast">Bike was successfully deleted</string>
    <string name="details_delete_fail_toast">Deletion could not be completed</string>
</resources>