<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/m_margin"
    android:paddingLeft="@dimen/m_margin"
    android:paddingRight="@dimen/m_margin"
    android:paddingTop="@dimen/s_margin">

    <TextView
        android:id="@+id/details_label_model"
        style="@style/TextViewLabel"
        android:text="@string/details_model_label" />

    <TextView
        android:id="@+id/details_content_model"
        style="@style/TextViewContent" />

    <TextView
        android:id="@+id/details_label_make"
        style="@style/TextViewLabel"
        android:text="@string/details_make_label" />

    <TextView
        android:id="@+id/details_content_make"
        style="@style/TextViewContent" />

    <TextView
        android:id="@+id/details_label_type"
        style="@style/TextViewLabel"
        android:text="@string/details_type_label" />

    <TextView
        android:id="@+id/details_content_type"
        style="@style/TextViewContent" />

    <TextView
        android:id="@+id/details_label_price"
        style="@style/TextViewLabel"
        android:text="@string/details_price_label" />

    <TextView
        android:id="@+id/details_content_price"
        style="@style/TextViewContent" />

    <TextView
        android:id="@+id/details_label_quantity"
        style="@style/TextViewLabel"
        android:text="@string/details_quantity_label" />

    <TextView
        android:id="@+id/details_content_quantity"
        style="@style/TextViewContent" />

    <TextView
        android:id="@+id/details_label_supplier"
        style="@style/TextViewLabel"
        android:text="@string/details_supplier_label" />

    <TextView
        android:id="@+id/details_content_supplier"
        style="@style/TextViewContent" />

    <TextView
        android:id="@+id/details_label_supplier_number"
        style="@style/TextViewLabel"
        android:text="@string/details_supplier_phone_label" />

    <TextView
        android:id="@+id/details_content_supplier_number"
        style="@style/TextViewContent" />

    <Button
        android:id="@+id/details_edit_button"
        style="@style/DetailsButton"
        android:text="@string/details_edit_button" />

    <Button
        android:id="@+id/details_delete_button"
        style="@style/DetailsButton"
        android:text="@string/details_delete_button" />

</LinearLayout>