<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/editor_layout"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/m_margin"
    android:paddingLeft="@dimen/m_margin"
    android:paddingRight="@dimen/m_margin"
    android:paddingTop="@dimen/s_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editor_model_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editor_model_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model_entry_hint"
            android:inputType="textAutoComplete" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editor_make_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editor_make_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/make_entry_hint"
            android:inputType="textAutoComplete" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/editor_bike_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_entry_hint" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editor_price_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editor_price_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_entry_hint"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editor_quantity_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editor_quantity_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_entry_hint"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editor_supplier_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editor_supplier_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_entry_hint"
            android:inputType="textAutoComplete" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editor_supplier_phone_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editor_supplier_phone_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_phone_entry_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_add_button"
        style="@style/DetailsButton"
        android:text="@string/save_button" />

</LinearLayout>